force-app/main/default/objects/Daily_Sales_Status_Map__c/Daily_Sales_Status_Map__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines the share access for a Daily Sales record dependent on record status.</description>
    <label>Daily Sales Status Map</label>
</CustomObject>