force-app/main/default/objects/Daily_Sales_Status_Map__c/fields/Audited__c.field-meta.xml
<CustomField>
    <fullName>Audited__c</fullName>
    <description>Access level to apply when Daily Sales record has a Reported Audited status. Read or Edit.</description>
    <inlineHelpText>Access level to apply when Daily Sales record has a Reported Audited status. Read or Edit.</inlineHelpText>
    <label>Audited</label>
    <length>10</length>
    <type>Text</type>
</CustomField>