force-app/main/default/objects/Daily_Sales_Status_Map__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <description>Access level to apply when Daily Sales record has a Certified status. Read or Edit.</description>
    <inlineHelpText>Access level to apply when Daily Sales record has a Certified status. Read or Edit.</inlineHelpText>
    <label>Certified</label>
    <length>10</length>
    <type>Text</type>
</CustomField>