force-app/main/default/objects/Daily_Sales_Status_Map__c/fields/Certified_Pending__c.field-meta.xml
<CustomField>
    <fullName>Certified_Pending__c</fullName>
    <description>Access level to apply when Daily Sales record has a Reported Audited status. Read or Edit.</description>
    <inlineHelpText>Access level to apply when Daily Sales record has a Reported Audited status. Read or Edit.</inlineHelpText>
    <label>Certified Pending</label>
    <length>20</length>
    <type>Text</type>
</CustomField>