force-app/main/default/objects/Daily_Sales_Status_Map__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <description>Access level to apply when Daily Sales record has a &quot;created&quot; status. Read or Edit.</description>
    <inlineHelpText>Access level to apply when Daily Sales record has a created status. Read or Edit.</inlineHelpText>
    <label>Created</label>
    <length>20</length>
    <type>Text</type>
</CustomField>