force-app/main/default/objects/Daily_Sales_Status_Map__c/fields/Reported_Complete__c.field-meta.xml
<CustomField>
    <fullName>Reported_Complete__c</fullName>
    <description>Access level to apply when Daily Sales record has a Reported Complete status. Read or Edit.</description>
    <inlineHelpText>Access level to apply when Daily Sales record has a Reported Complete status. Read or Edit.</inlineHelpText>
    <label>Reported Complete</label>
    <length>20</length>
    <type>Text</type>
</CustomField>