force-app/main/default/objects/Daily_Sales_Status_Map__c/fields/TOR__c.field-meta.xml
<CustomField>
    <fullName>TOR__c</fullName>
    <description>Access level to apply when Daily Sales record has a TOR status. Read or Edit.</description>
    <inlineHelpText>Access level to apply when Daily Sales record has a TOR status. Read or Edit.</inlineHelpText>
    <label>TOR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>